force-app/main/default/objects/Student_Letter_Log__c.object
<CustomObject>
    <description>Stores Student Letter&apos;s transaction log details</description>
    <fields>
        <fullName>API_Response__c</fullName>
        <description>The response from the Student Letters API for the request to generate the letter whose details are in this Student Letter Log</description>
        <label>API Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chatbot</fullName>
                    <default>true</default>
                    <label>Chatbot</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chat_365_Log_Detail__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Link to Chat 365 Log Detail record</description>
        <label>Chat 365 Log Detail</label>
        <referenceTo>Chat_365_Log_Detail__c</referenceTo>
        <relationshipLabel>Student Letter Logs</relationshipLabel>
        <relationshipName>Student_Letter_Logs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chat_365_Log__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Links to chat 365 log record</description>
        <label>Chat 365 Log</label>
        <referenceTo>Chat_365_Log__c</referenceTo>
        <relationshipLabel>Student Letter Logs</relationshipLabel>
        <relationshipName>Student_Letter_Logs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact record of the student to which this Student Letter Log relates</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Letter Logs</relationshipLabel>
        <relationshipName>Student_Letter_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Attempt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Attempt</label>
        <referenceTo>Course_Attempt__c</referenceTo>
        <relationshipLabel>Student Letter Logs</relationshipLabel>
        <relationshipName>Student_Letter_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <label>Course Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <formula>Course_Attempt__r.Course_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Year__c</fullName>
        <label>Course Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enquiry</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Student Letter Logs</relationshipLabel>
        <relationshipName>Student_Letter_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Completion_Date__c</fullName>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Letter_Delivery_Medium__c</fullName>
        <label>Letter Delivery Medium</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Hard copy</fullName>
                </value>
                <value>
                    <fullName>Digital and hard copy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Letter_Description__c</fullName>
        <label>Letter Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MYEQ0202_ENROLMENT_VERIFICATION</fullName>
                    <label>Enrolment Verification</label>
                </value>
                <value>
                    <fullName>MYEQ0206_PROOF_OF_QUALIFICATION</fullName>
                    <label>Proof of Qualification</label>
                </value>
                <value>
                    <fullName>MYEQ0207_PROOF_OF_GRADUATION</fullName>
                    <label>Proof of Graduation</label>
                </value>
                <value>
                    <fullName>MYEQ0210_FORECAST_COMPLETION_DATE</fullName>
                    <label>Forecast Completion Date</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Letter_Price__c</fullName>
        <description>Price of the letter</description>
        <label>Letter Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Letter_Status__c</fullName>
        <description>Status of the letter requested.</description>
        <label>Letter Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Payment Completed</fullName>
                </value>
                <value>
                    <fullName>Pending Date Update</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Sent to Callista</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Contains the Message from Payment gateway</description>
        <label>Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>Payment Method</description>
        <label>Payment Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <description>Status of the transaction</description>
        <label>Payment Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Id__c</fullName>
        <description>Receipt Id</description>
        <label>Receipt Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <description>Contains Session Id + Letter Code</description>
        <label>Session Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <description>Student Id</description>
        <label>Student Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Student Letter Log</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Student_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Letter_Price__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Receipt_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>SUCCESSFUL</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>UNSUCCESSFUL</value>
        </filters>
        <label>All Digital Letters</label>
    </listViews>
    <listViews>
        <fullName>All_Digital_Letters_Last_7_Days</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Student_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Letter_Price__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Receipt_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Letter_Price__c</field>
            <operation>notEqual</operation>
            <value>0.01</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>SUCCESSFUL</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>UNSUCCESSFUL</value>
        </filters>
        <label>All Digital Letters - Last 7 Days</label>
        <sharedTo>
            <role>Monash_Connect_Future_Officer</role>
            <role>Monash_Connect_Leader</role>
            <role>Monash_Connect_Officer</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Digital_Letters_Today</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Student_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Letter_Price__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Receipt_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Letter_Price__c</field>
            <operation>notEqual</operation>
            <value>0.01</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>SUCCESSFUL</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>UNSUCCESSFUL</value>
        </filters>
        <label>All Digital Letters - Today</label>
        <sharedTo>
            <role>Monash_Connect_Future_Officer</role>
            <role>Monash_Connect_Leader</role>
            <role>Monash_Connect_Officer</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Apple_Pay_Digital_Letters_Last_7_Days</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Student_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Letter_Price__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Receipt_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Letter_Price__c</field>
            <operation>notEqual</operation>
            <value>0.01</value>
        </filters>
        <filters>
            <field>Payment_Method__c</field>
            <operation>equals</operation>
            <value>ApplePayCard</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>SUCCESSFUL</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>UNSUCCESSFUL</value>
        </filters>
        <label>ApplePay Digital Letters - Last 7 Days</label>
        <sharedTo>
            <role>Monash_Connect_Future_Officer</role>
            <role>Monash_Connect_Leader</role>
            <role>Monash_Connect_Officer</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CreditCard_Digital_Letters_Today</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Student_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Letter_Price__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Receipt_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Letter_Price__c</field>
            <operation>notEqual</operation>
            <value>0.01</value>
        </filters>
        <filters>
            <field>Payment_Method__c</field>
            <operation>equals</operation>
            <value>CreditCard</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>SUCCESSFUL</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>UNSUCCESSFUL</value>
        </filters>
        <label>CreditCard Digital Letters - Today</label>
        <sharedTo>
            <role>Monash_Connect_Future_Officer</role>
            <role>Monash_Connect_Leader</role>
            <role>Monash_Connect_Officer</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Card_Digital_Letters_Last_7_Days</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Student_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Letter_Price__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Receipt_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Letter_Price__c</field>
            <operation>notEqual</operation>
            <value>0.01</value>
        </filters>
        <filters>
            <field>Payment_Method__c</field>
            <operation>equals</operation>
            <value>CreditCard</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>SUCCESSFUL</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>UNSUCCESSFUL</value>
        </filters>
        <label>CreditCard Digital Letters - Last 7 Days</label>
        <sharedTo>
            <role>Monash_Connect_Future_Officer</role>
            <role>Monash_Connect_Leader</role>
            <role>Monash_Connect_Officer</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Google_Pay_Digital_Letters_Last_7_Days</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Student_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Letter_Price__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Receipt_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Letter_Price__c</field>
            <operation>notEqual</operation>
            <value>0.01</value>
        </filters>
        <filters>
            <field>Payment_Method__c</field>
            <operation>equals</operation>
            <value>AndroidPayCard</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>SUCCESSFUL</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>UNSUCCESSFUL</value>
        </filters>
        <label>GooglePay Digital Letters - Last 7 Days</label>
        <sharedTo>
            <role>Monash_Connect_Future_Officer</role>
            <role>Monash_Connect_Leader</role>
            <role>Monash_Connect_Officer</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X01_Apple_Pay_Digital_Letters_Today</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Student_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Letter_Price__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Receipt_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Letter_Price__c</field>
            <operation>notEqual</operation>
            <value>0.01</value>
        </filters>
        <filters>
            <field>Payment_Method__c</field>
            <operation>equals</operation>
            <value>ApplePayCard</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>SUCCESSFUL</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>UNSUCCESSFUL</value>
        </filters>
        <label>ApplePay Digital Letters - Today</label>
        <sharedTo>
            <role>Monash_Connect_Future_Officer</role>
            <role>Monash_Connect_Leader</role>
            <role>Monash_Connect_Officer</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X01_Google_Pay_Digital_Letters_Today</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Student_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Letter_Price__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Receipt_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Letter_Price__c</field>
            <operation>notEqual</operation>
            <value>0.01</value>
        </filters>
        <filters>
            <field>Payment_Method__c</field>
            <operation>equals</operation>
            <value>AndroidPayCard</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>SUCCESSFUL</value>
        </filters>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>UNSUCCESSFUL</value>
        </filters>
        <label>GooglePay Digital Letters - Today</label>
        <sharedTo>
            <role>Monash_Connect_Future_Officer</role>
            <role>Monash_Connect_Leader</role>
            <role>Monash_Connect_Officer</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SLL{0000000}</displayFormat>
        <label>Student Letter Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Letter Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>